implemented config file
