# src/main/kotlin/at/fklab/ota_server/development/accessToken_samples.kt
@@ -1,11 +1,0 @@
-package at.fklab.ota_server.development
-
-import at.fklab.ota_server.models.AccessToken
-
-val sampleAccessTokens = listOf<AccessToken>(
-    AccessToken(id = 1, tokenString = "", info = ""),
-    AccessToken(id = 2, tokenString = "", info = ""),
-    AccessToken(id = 3, tokenString = "", info = ""),
-    AccessToken(id = 4, tokenString = "", info = ""),
-    AccessToken(id = 5, tokenString = "", info = ""),
-)
