# src/main/kotlin/at/fklab/ota_server/development/user_samples.kt
@@ -2,7 +2,7 @@ package at.fklab.ota_server.development
 
 import at.fklab.ota_server.models.User
 
-val sampleUsers = listOf(
-    User(id = 1, accessToken = sampleAccessTokens[0], info = ""),
-    User(id = 2, accessToken = sampleAccessTokens[1], info = ""),
+val sampleUsers = listOf<User>(
+//    User(id = 1, accessToken = sampleAccessTokens[0], info = ""),
+//    User(id = 2, accessToken = sampleAccessTokens[1], info = ""),
 )
