# src/main/kotlin/at/fklab/ota_server/models/User.kt
@@ -10,8 +10,11 @@ import org.jetbrains.exposed.sql.javatime.datetime
 
 object Users : IntIdTable("users") {
 
-    val accessToken = reference("accessToken", AccessTokens)
-    val info = text("info").nullable()
+
+    val login = varchar("login", 10)
+    val firstname = varchar("firstname", 255)
+    val lastname = varchar("lastname", 255)
+    val description = varchar("description", 255)
 
     val updatedAt = datetime("updatedAt").nullable()
     val updatedBy = text("updatedBy").nullable()
@@ -22,8 +25,10 @@ object Users : IntIdTable("users") {
 class UserEntity(id: EntityID<Int>) : IntEntity(id) {
     companion object : IntEntityClass<UserEntity>(Users)
 
-    var accessToken by AccessTokenEntity referencedOn Users.accessToken
-    var info by Users.info
+    var login by Users.login
+    var firstname by Users.firstname
+    var lastname by Users.lastname
+    var description by Users.description
 
     var updatedAt by Users.updatedAt
     var updatedBy by Users.updatedBy
@@ -31,11 +36,11 @@ class UserEntity(id: EntityID<Int>) : IntEntity(id) {
     var deletedBy by Users.deletedBy
 
     fun toUser() = User(
-        id.value, accessToken.toAccessToken(), info
+        id.value, login, firstname, lastname, description
     )
 }
 
 @Serializable
 data class User(
-    var id: Int?, var accessToken: AccessToken, var info: String?
+    var id: Int?, val login: String, val firstname: String, val lastname: String, var description: String
 )
