# src/main/kotlin/at/fklab/ota_server/services/UserService.kt
@@ -1,6 +1,5 @@
 package at.fklab.ota_server.services
 
-import at.fklab.ota_server.models.AccessTokenEntity
 import at.fklab.ota_server.models.User
 import at.fklab.ota_server.models.UserEntity
 import at.fklab.ota_server.models.Users
@@ -23,8 +22,10 @@ class UserService {
 
     fun add(user: User): User = transaction {
         UserEntity.new {
-            accessToken = user.accessToken.id?.let { AccessTokenEntity.findById(it) }!!
-            info = user.info
+            login = user.login
+            firstname = user.firstname
+            lastname = user.lastname
+            description = user.description
 
             updatedAt = LocalDateTime.now()
             updatedBy = ""
@@ -34,8 +35,10 @@ class UserService {
     fun update(user: User): User = transaction {
         val notNullId = user.id!!
 
-        UserEntity[notNullId].accessToken = user.accessToken.id?.let { AccessTokenEntity.findById(it) }!!
-        UserEntity[notNullId].info = user.info
+        UserEntity[notNullId].login = user.login
+        UserEntity[notNullId].firstname = user.firstname
+        UserEntity[notNullId].lastname = user.lastname
+        UserEntity[notNullId].description = user.description
 
         UserEntity[notNullId].updatedAt = LocalDateTime.now()
         UserEntity[notNullId].updatedBy = ""
